[gd_scene load_steps=28 format=2]

[ext_resource path="res://Character/Bat_bot_blue_TEST.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Bat/Bat_mouv_Bat_mouv_1.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Bat/Bat_mouv_Bat_mouv_2.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Bat/Bat_mouv_Bat_mouv_3.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Bat/Bat_mouv_Bat_mouv_4.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Bat/Bat_mouv_Bat_attack.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Bat/die/Bat_mouv_Bat_attackdie_1.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Bat/die/Bat_mouv_Bat_attackdie_2.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Bat/die/Bat_mouv_Bat_attackdie_3.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Bat/die/Bat_mouv_Bat_attackdie_4.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Bat/die/Bat_mouv_Bat_attackdie_5.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Bat/die/Bat_mouv_Bat_attackdie_6.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Bat/die_2/Bat_mouv_Bat_attackdie_1.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Bat/die_2/Bat_mouv_Bat_attackCopy_die_1.png" type="Texture" id=14]
[ext_resource path="res://Graphics/Bat/die_2/Bat_mouv_Bat_attackCopy_Copy_die_1.png" type="Texture" id=15]
[ext_resource path="res://Graphics/Bat/die_2/Bat_mouv_Bat_attackCopy_Copy_Copy_die_1.png" type="Texture" id=16]
[ext_resource path="res://Graphics/interface/bar_vie/bar_vie.png" type="Texture" id=17]
[ext_resource path="res://Graphics/interface/bar_vie/vie_blue.png" type="Texture" id=18]
[ext_resource path="res://Bat_move.tres" type="Animation" id=19]



[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "mouv",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "die",
"speed": 14.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "die_2",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("bat_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}

[sub_resource type="Animation" id=5]
resource_name = "Bat_move"
length = 4.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("bat_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "mouv" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.75, 2.75, 3.6 ),
"transitions": PoolRealArray( 0, 0, 0, 0, 0 ),
"update": 1,
"values": [ PoolVector2Array( -8, -14, 24, -15, 18, 12, -14, -1 ), PoolVector2Array( -8, -14, 24, -15, 9, -4, -14, -1 ), PoolVector2Array( -8, -14, 3, -9, 9, -4, -14, -1 ), PoolVector2Array( 10, -26, 3, -9, 9, -4, -14, -1 ), PoolVector2Array( 7, -8, 19, 4, -2, 7, -14, -1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("bat_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bat_spr:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("bat_spr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die_2" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bat_spr:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 1.0

[node name="Bat_bot_blue" type="KinematicBody2D" groups=[
"Character_sprite",
"Character_blue",
]]
collision_mask = 2
script = ExtResource( 1 )

[node name="bat_spr" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "mouv"
frame = 2
speed_scale = 0.75
__meta__ = {
"_edit_lock_": true
}

[node name="barre_vie" type="AnimatedSprite" parent="bat_spr"]
position = Vector2( 0, -17 )
frames = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="vie" type="AnimatedSprite" parent="bat_spr/barre_vie"]
position = Vector2( -8, -13 )
frames = SubResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bat_attack = SubResource( 4 )
anims/Bat_move = ExtResource( 19 )
"anims/Bat_move (copy)" = SubResource( 5 )
anims/die = SubResource( 6 )
anims/die_2 = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, -14, 24, -15, 18, 12, -14, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
